adicion de servicios de la categoria ApiMotorLealtadArchivo